--- a/RetinaColorPix/MainWindow.xaml
+++ b/RetinaColorPix/MainWindow.xaml
@@ -3,17 +3,56 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:RetinaColorPix"
-        xmlns:colorPicker="clr-namespace:ColorPicker"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="230" Width="289" Icon="icon.ico">
+        xmlns:local="clr-namespace:RetinaColorPix" ResizeMode="NoResize"
+        xmlns:colorPicker="clr-namespace:ColorPicker" WindowStartupLocation="CenterScreen"
+        mc:Ignorable="d" 
+        Title="Retina颜色拾取器-www.warmsky.wang" Height="270" Width="310" Icon="icon.ico">
     <Grid>
-        <Border   BorderBrush="Black" BorderThickness="1">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="110"/>
+            <RowDefinition Height="91*"/>
+        </Grid.RowDefinitions>
+        <Border   BorderBrush="Black" BorderThickness="0" >
             <colorPicker:ColorPicker 
-      x:Name="ColorPicker"
-      SelectedColor="White" Width="NaN"
+      x:Name="change" SelectedColorChanged="change_SelectedColorChanged"
+      SelectedColor="White" 
       Padding="5" BorderBrush="Gray" BorderThickness="1" Background="Azure"
-      HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,0,0" Height="110"/>
+      HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,-1,-2" Height="110" Width="303"/>
+
         </Border>
+        <Grid Grid.Row="1"   >
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="5"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="80"/>
+                <ColumnDefinition Width="60*"/>
+                <ColumnDefinition Width="99*"/>
+                <ColumnDefinition Width="65*"/>
+            </Grid.ColumnDefinitions>
+            <Border Name="bordCurrentColor"   BorderThickness="0" Height="70" Width="70" VerticalAlignment="Top" Margin="5,5,5,0" Grid.RowSpan="3" />
+            <Button x:Name="BtnPick" Content="从屏幕拾取" HorizontalAlignment="Left" Margin="3,30,0,0" VerticalAlignment="Top" Width="75" Grid.Row="2" Grid.RowSpan="2" Click="BtnPick_Click"/>
+            <TextBlock x:Name="textBlock" Grid.Column="1" HorizontalAlignment="Left" Margin="7,0,0,0" TextWrapping="Wrap" Text="鼠标：" VerticalAlignment="Center"/>
+            <TextBlock x:Name="TblMouse" Grid.Column="2" HorizontalAlignment="Left" Margin="0,0,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Center"/>
+
+            <TextBlock x:Name="textBlock_Copy" Grid.Column="1" HorizontalAlignment="Left" Margin="7,10,0,0" TextWrapping="Wrap" Text="RGB：" VerticalAlignment="Top" Grid.Row="1"/>
+            <TextBox x:Name="TxtRGB" Grid.Column="2"  Height="22" Margin="0,0,0,0"  TextWrapping="Wrap" Text="" VerticalAlignment="Center" Grid.Row="1"/>
+            <Button x:Name="BtnCopyRGB" Content="复制" HorizontalAlignment="Left" Margin="10,7,0,0" VerticalAlignment="Top" Width="45" Grid.Column="3" Grid.Row="1"/>
+
+            <TextBlock   Grid.Column="1" HorizontalAlignment="Left" Margin="7,0,0,0"  TextWrapping="Wrap" Text="ARGB：" VerticalAlignment="Center" Grid.Row="2"/>
+            <TextBox x:Name="TxtARGB" Grid.Column="2"  Height="22" Margin="0,0,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Grid.Row="2"/>
+            <Button x:Name="BtnCopyARGB" Content="复制" HorizontalAlignment="Left" Margin="10,7,0,0" VerticalAlignment="Top" Width="45" Grid.Column="3" Grid.Row="2"/>
+
+
+            <TextBlock   Grid.Column="1" HorizontalAlignment="Left" Margin="7,0,0,0"  TextWrapping="Wrap" Text="16进制：" VerticalAlignment="Center" Grid.Row="3"/>
+            <TextBox x:Name="TxtHex" Grid.Column="2"  Height="22" Margin="0,0,0,0"  TextWrapping="Wrap" Text="" VerticalAlignment="Center" Grid.Row="3"/>
+
+            <Button x:Name="BtnCopyHex" Content="复制" HorizontalAlignment="Left" Margin="10,7,0,0" VerticalAlignment="Top" Width="45" Grid.Column="3" Grid.Row="3"/>
+
+        </Grid>
     </Grid>
 </Window>
